add statistics for managers
